{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 37,
  "lineage": "1385ec5b-71f1-e01b-9192-a66661b4e5f5",
  "resources": [
    {
      "module": "module.module-alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "demo-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:776117902794:loadbalancer/app/demo-alb/a5843a470d6bf1b6",
            "arn_suffix": "app/demo-alb/a5843a470d6bf1b6",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "demo-alb-411199019.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:776117902794:loadbalancer/app/demo-alb/a5843a470d6bf1b6",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "demo-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-045696a128ad513a2"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0877435995899b3fe"
              },
              {
                "subnet_id": "subnet-08faf40144b295c0b"
              }
            ],
            "subnets": [
              "subnet-0877435995899b3fe",
              "subnet-08faf40144b295c0b"
            ],
            "tags": {
              "Name": "demo-ALB"
            },
            "tags_all": {
              "Name": "demo-ALB"
            },
            "vpc_id": "vpc-0270e0bf08b6100fe",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:776117902794:loadbalancer/app/demo-alb/a5843a470d6bf1b6"
          },
          "dependencies": [
            "module.module-alb.aws_security_group.alb-sg",
            "module.module-vpc.aws_subnet.alb-subnet-1",
            "module.module-vpc.aws_subnet.alb-subnet-2",
            "module.module-vpc.aws_vpc.demo-vpc",
            "module.module-vpc.data.aws_availability_zones.all-azs"
          ]
        }
      ]
    },
    {
      "module": "module.module-alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:776117902794:listener/app/demo-alb/a5843a470d6bf1b6/21aa9feeee18b80e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "Not Found, buddy.",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:776117902794:listener/app/demo-alb/a5843a470d6bf1b6/21aa9feeee18b80e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:776117902794:loadbalancer/app/demo-alb/a5843a470d6bf1b6",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:776117902794:listener/app/demo-alb/a5843a470d6bf1b6/21aa9feeee18b80e"
          },
          "dependencies": [
            "module.module-alb.aws_lb.demo-alb",
            "module.module-alb.aws_security_group.alb-sg",
            "module.module-vpc.aws_subnet.alb-subnet-1",
            "module.module-vpc.aws_subnet.alb-subnet-2",
            "module.module-vpc.aws_vpc.demo-vpc",
            "module.module-vpc.data.aws_availability_zones.all-azs"
          ]
        }
      ]
    },
    {
      "module": "module.module-alb",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "app-listener-rule-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:776117902794:targetgroup/demo-tg/7408197958d9bb5c",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:776117902794:listener-rule/app/demo-alb/a5843a470d6bf1b6/21aa9feeee18b80e/d4a0ff82bdec9c42",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:776117902794:listener-rule/app/demo-alb/a5843a470d6bf1b6/21aa9feeee18b80e/d4a0ff82bdec9c42",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:776117902794:listener/app/demo-alb/a5843a470d6bf1b6/21aa9feeee18b80e",
            "priority": 50,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {},
            "transform": []
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:776117902794:listener-rule/app/demo-alb/a5843a470d6bf1b6/21aa9feeee18b80e/d4a0ff82bdec9c42"
          },
          "dependencies": [
            "module.module-alb.aws_lb.demo-alb",
            "module.module-alb.aws_lb_listener.app-listener",
            "module.module-alb.aws_lb_target_group.demo-tg",
            "module.module-alb.aws_security_group.alb-sg",
            "module.module-vpc.aws_subnet.alb-subnet-1",
            "module.module-vpc.aws_subnet.alb-subnet-2",
            "module.module-vpc.aws_vpc.demo-vpc",
            "module.module-vpc.data.aws_availability_zones.all-azs"
          ]
        }
      ]
    },
    {
      "module": "module.module-alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "demo-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:776117902794:targetgroup/demo-tg/7408197958d9bb5c",
            "arn_suffix": "targetgroup/demo-tg/7408197958d9bb5c",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-299",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:776117902794:targetgroup/demo-tg/7408197958d9bb5c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "demo-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "demo-tg"
            },
            "tags_all": {
              "Name": "demo-tg"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0270e0bf08b6100fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:776117902794:targetgroup/demo-tg/7408197958d9bb5c"
          },
          "dependencies": [
            "module.module-vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module-alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776117902794:security-group/sg-045696a128ad513a2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-045696a128ad513a2",
            "ingress": [],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "776117902794",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0270e0bf08b6100fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "776117902794",
            "id": "sg-045696a128ad513a2",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.module-vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module-alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776117902794:security-group-rule/sgr-0c60929d8e2209dfa",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0c60929d8e2209dfa",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-045696a128ad513a2",
            "security_group_rule_id": "sgr-0c60929d8e2209dfa",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "776117902794",
            "id": "sgr-0c60929d8e2209dfa",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.module-alb.aws_security_group.alb-sg",
            "module.module-vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module-alb",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776117902794:security-group-rule/sgr-06fa10c8fedf2a4e8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-06fa10c8fedf2a4e8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-045696a128ad513a2",
            "security_group_rule_id": "sgr-06fa10c8fedf2a4e8",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "776117902794",
            "id": "sgr-06fa10c8fedf2a4e8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.module-alb.aws_security_group.alb-sg",
            "module.module-vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module-ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776117902794:security-group/sg-007d9e6b745961f89",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-007d9e6b745961f89",
            "ingress": [],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "776117902794",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-sg"
            },
            "tags_all": {
              "Name": "ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0270e0bf08b6100fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "776117902794",
            "id": "sg-007d9e6b745961f89",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.module-vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module-ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776117902794:security-group-rule/sgr-061b5db6fbcf14ae7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-061b5db6fbcf14ae7",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-007d9e6b745961f89",
            "security_group_rule_id": "sgr-061b5db6fbcf14ae7",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "776117902794",
            "id": "sgr-061b5db6fbcf14ae7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.module-ec2.aws_security_group.ec2-sg",
            "module.module-vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module-ec2",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776117902794:security-group-rule/sgr-04442508ac46b2e75",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-04442508ac46b2e75",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-045696a128ad513a2",
            "region": "us-east-1",
            "security_group_id": "sg-007d9e6b745961f89",
            "security_group_rule_id": "sgr-04442508ac46b2e75",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "776117902794",
            "id": "sgr-04442508ac46b2e75",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.module-alb.aws_security_group.alb-sg",
            "module.module-ec2.aws_security_group.ec2-sg",
            "module.module-vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module-rds",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776117902794:security-group/sg-0ba43b8dfb9dec255",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ba43b8dfb9dec255",
            "ingress": [],
            "name": "rds-sg",
            "name_prefix": "",
            "owner_id": "776117902794",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "rds-sg"
            },
            "tags_all": {
              "Name": "rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0270e0bf08b6100fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "776117902794",
            "id": "sg-0ba43b8dfb9dec255",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.module-vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module-rds",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "allow-all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776117902794:security-group-rule/sgr-060f5c59f8db2e086",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-060f5c59f8db2e086",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0ba43b8dfb9dec255",
            "security_group_rule_id": "sgr-060f5c59f8db2e086",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "776117902794",
            "id": "sgr-060f5c59f8db2e086",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.module-rds.aws_security_group.rds-sg",
            "module.module-vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module-rds",
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776117902794:security-group-rule/sgr-09196255053105978",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-09196255053105978",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-007d9e6b745961f89",
            "region": "us-east-1",
            "security_group_id": "sg-0ba43b8dfb9dec255",
            "security_group_rule_id": "sgr-09196255053105978",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "776117902794",
            "id": "sgr-09196255053105978",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.module-ec2.aws_security_group.ec2-sg",
            "module.module-rds.aws_security_group.rds-sg",
            "module.module-vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "demo-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da0a1acafa6db88a",
            "arn": "arn:aws:ec2:us-east-1:776117902794:elastic-ip/eipalloc-0da0a1acafa6db88a",
            "domain": "vpc",
            "id": "eipalloc-0da0a1acafa6db88a",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-234-115-109.compute-1.amazonaws.com",
            "public_ip": "34.234.115.109",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "demo-eip"
            },
            "tags_all": {
              "Name": "demo-eip"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776117902794:internet-gateway/igw-073b27859b06ac29e",
            "id": "igw-073b27859b06ac29e",
            "owner_id": "776117902794",
            "region": "us-east-1",
            "tags": {
              "Name": "demo--igw"
            },
            "tags_all": {
              "Name": "demo--igw"
            },
            "vpc_id": "vpc-0270e0bf08b6100fe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.module-vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "demo-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da0a1acafa6db88a",
            "association_id": "eipassoc-0ad573adf3bab8491",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0abc34c44f8633649",
            "network_interface_id": "eni-0fe3a26ded78a07a7",
            "private_ip": "10.0.0.228",
            "public_ip": "34.234.115.109",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08faf40144b295c0b",
            "tags": {
              "Name": "demo-ngw"
            },
            "tags_all": {
              "Name": "demo-ngw"
            },
            "vpc_id": "vpc-0270e0bf08b6100fe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.module-vpc.aws_eip.demo-eip",
            "module.module-vpc.aws_internet_gateway.demo-igw",
            "module.module-vpc.aws_subnet.alb-subnet-1",
            "module.module-vpc.aws_vpc.demo-vpc",
            "module.module-vpc.data.aws_availability_zones.all-azs"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776117902794:route-table/rtb-0cd199e246dede0e0",
            "id": "rtb-0cd199e246dede0e0",
            "owner_id": "776117902794",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0abc34c44f8633649",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0270e0bf08b6100fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "776117902794",
            "id": "rtb-0cd199e246dede0e0",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.module-vpc.aws_eip.demo-eip",
            "module.module-vpc.aws_internet_gateway.demo-igw",
            "module.module-vpc.aws_nat_gateway.demo-ngw",
            "module.module-vpc.aws_subnet.alb-subnet-1",
            "module.module-vpc.aws_vpc.demo-vpc",
            "module.module-vpc.data.aws_availability_zones.all-azs"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776117902794:route-table/rtb-0176fbeb0e54f4dd4",
            "id": "rtb-0176fbeb0e54f4dd4",
            "owner_id": "776117902794",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-073b27859b06ac29e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-RT"
            },
            "tags_all": {
              "Name": "public-RT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0270e0bf08b6100fe"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "776117902794",
            "id": "rtb-0176fbeb0e54f4dd4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.module-vpc.aws_internet_gateway.demo-igw",
            "module.module-vpc.aws_vpc.demo-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-ec2-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-040a00dae602f8adf",
            "region": "us-east-1",
            "route_table_id": "rtb-0cd199e246dede0e0",
            "subnet_id": "subnet-044b28a3213bb2990"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.module-vpc.aws_eip.demo-eip",
            "module.module-vpc.aws_internet_gateway.demo-igw",
            "module.module-vpc.aws_nat_gateway.demo-ngw",
            "module.module-vpc.aws_route_table.private-rt",
            "module.module-vpc.aws_subnet.alb-subnet-1",
            "module.module-vpc.aws_subnet.ec2-subnet-1",
            "module.module-vpc.aws_vpc.demo-vpc",
            "module.module-vpc.data.aws_availability_zones.all-azs"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-ec2-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-071ce999b44497496",
            "region": "us-east-1",
            "route_table_id": "rtb-0cd199e246dede0e0",
            "subnet_id": "subnet-0735ada6a1d2a533a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.module-vpc.aws_eip.demo-eip",
            "module.module-vpc.aws_internet_gateway.demo-igw",
            "module.module-vpc.aws_nat_gateway.demo-ngw",
            "module.module-vpc.aws_route_table.private-rt",
            "module.module-vpc.aws_subnet.alb-subnet-1",
            "module.module-vpc.aws_subnet.ec2-subnet-2",
            "module.module-vpc.aws_vpc.demo-vpc",
            "module.module-vpc.data.aws_availability_zones.all-azs"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-rds-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e458b221c446e064",
            "region": "us-east-1",
            "route_table_id": "rtb-0cd199e246dede0e0",
            "subnet_id": "subnet-0fb38481b545362ae"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.module-vpc.aws_eip.demo-eip",
            "module.module-vpc.aws_internet_gateway.demo-igw",
            "module.module-vpc.aws_nat_gateway.demo-ngw",
            "module.module-vpc.aws_route_table.private-rt",
            "module.module-vpc.aws_subnet.alb-subnet-1",
            "module.module-vpc.aws_subnet.rds-subnet-1",
            "module.module-vpc.aws_vpc.demo-vpc",
            "module.module-vpc.data.aws_availability_zones.all-azs"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rt-rds-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d3ee8b23f8483adb",
            "region": "us-east-1",
            "route_table_id": "rtb-0cd199e246dede0e0",
            "subnet_id": "subnet-090cae9135fabd856"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.module-vpc.aws_eip.demo-eip",
            "module.module-vpc.aws_internet_gateway.demo-igw",
            "module.module-vpc.aws_nat_gateway.demo-ngw",
            "module.module-vpc.aws_route_table.private-rt",
            "module.module-vpc.aws_subnet.alb-subnet-1",
            "module.module-vpc.aws_subnet.rds-subnet-2",
            "module.module-vpc.aws_vpc.demo-vpc",
            "module.module-vpc.data.aws_availability_zones.all-azs"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-alb-1-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4dce4b657a0581f",
            "region": "us-east-1",
            "route_table_id": "rtb-0176fbeb0e54f4dd4",
            "subnet_id": "subnet-08faf40144b295c0b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.module-vpc.aws_internet_gateway.demo-igw",
            "module.module-vpc.aws_route_table.public-rt",
            "module.module-vpc.aws_subnet.alb-subnet-1",
            "module.module-vpc.aws_vpc.demo-vpc",
            "module.module-vpc.data.aws_availability_zones.all-azs"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rt-alb-2-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052ae753bdbd6cacf",
            "region": "us-east-1",
            "route_table_id": "rtb-0176fbeb0e54f4dd4",
            "subnet_id": "subnet-0877435995899b3fe"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.module-vpc.aws_internet_gateway.demo-igw",
            "module.module-vpc.aws_route_table.public-rt",
            "module.module-vpc.aws_subnet.alb-subnet-2",
            "module.module-vpc.aws_vpc.demo-vpc",
            "module.module-vpc.data.aws_availability_zones.all-azs"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alb-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776117902794:subnet/subnet-08faf40144b295c0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08faf40144b295c0b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "776117902794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "alb-subnet-1"
            },
            "tags_all": {
              "Name": "alb-subnet-1"
            },
            "vpc_id": "vpc-0270e0bf08b6100fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "776117902794",
            "id": "subnet-08faf40144b295c0b",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.module-vpc.aws_vpc.demo-vpc",
            "module.module-vpc.data.aws_availability_zones.all-azs"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "alb-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776117902794:subnet/subnet-0877435995899b3fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0877435995899b3fe",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "776117902794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "alb-subnet-2"
            },
            "tags_all": {
              "Name": "alb-subnet-2"
            },
            "vpc_id": "vpc-0270e0bf08b6100fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "776117902794",
            "id": "subnet-0877435995899b3fe",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.module-vpc.aws_vpc.demo-vpc",
            "module.module-vpc.data.aws_availability_zones.all-azs"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ec2-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776117902794:subnet/subnet-044b28a3213bb2990",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.50.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-044b28a3213bb2990",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "776117902794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ec2-subnet-1"
            },
            "tags_all": {
              "Name": "ec2-subnet-1"
            },
            "vpc_id": "vpc-0270e0bf08b6100fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "776117902794",
            "id": "subnet-044b28a3213bb2990",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.module-vpc.aws_vpc.demo-vpc",
            "module.module-vpc.data.aws_availability_zones.all-azs"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ec2-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776117902794:subnet/subnet-0735ada6a1d2a533a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.51.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0735ada6a1d2a533a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "776117902794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "ec2-subnet-2"
            },
            "tags_all": {
              "Name": "ec2-subnet-2"
            },
            "vpc_id": "vpc-0270e0bf08b6100fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "776117902794",
            "id": "subnet-0735ada6a1d2a533a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.module-vpc.aws_vpc.demo-vpc",
            "module.module-vpc.data.aws_availability_zones.all-azs"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776117902794:subnet/subnet-0fb38481b545362ae",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.100.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb38481b545362ae",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "776117902794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "rds-subnet-1"
            },
            "tags_all": {
              "Name": "rds-subnet-1"
            },
            "vpc_id": "vpc-0270e0bf08b6100fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "776117902794",
            "id": "subnet-0fb38481b545362ae",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.module-vpc.aws_vpc.demo-vpc",
            "module.module-vpc.data.aws_availability_zones.all-azs"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "rds-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776117902794:subnet/subnet-090cae9135fabd856",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090cae9135fabd856",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "776117902794",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "rds-subnet-2"
            },
            "tags_all": {
              "Name": "rds-subnet-2"
            },
            "vpc_id": "vpc-0270e0bf08b6100fe"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "776117902794",
            "id": "subnet-090cae9135fabd856",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.module-vpc.aws_vpc.demo-vpc",
            "module.module-vpc.data.aws_availability_zones.all-azs"
          ]
        }
      ]
    },
    {
      "module": "module.module-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:776117902794:vpc/vpc-0270e0bf08b6100fe",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05f6b36b8cc2c4b5d",
            "default_route_table_id": "rtb-0a6c78848a2b3eacc",
            "default_security_group_id": "sg-0f3cae134dd3ba20f",
            "dhcp_options_id": "dopt-08b9064e22969b975",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0270e0bf08b6100fe",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a6c78848a2b3eacc",
            "owner_id": "776117902794",
            "region": "us-east-1",
            "tags": {
              "Name": "demo--vpc"
            },
            "tags_all": {
              "Name": "demo--vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "776117902794",
            "id": "vpc-0270e0bf08b6100fe",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}